[project]
name = "data-pipeline"
version = "0.1.0"
description = "data-pipeline"
requires-python = ">=3.11"
dependencies = [
    "oncx-core",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[tool.pyright]
typeCheckingMode = "basic"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportOptionalContextManager = "none"

[tool.uv.sources]
oncx-core = { git = "https://github.com/oncocross/oncx-core.git", rev = "1.13.0" }
