[project]
name = "data-pipeline"
version = "0.1.0"
description = "data-pipeline"
requires-python = ">=3.11"
dependencies = [
    "flask-socketio>=5.5.1",
    "jsonpickle>=4.1.1",
    "oncx-core",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "websocket-client>=1.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[tool.pyright]
typeCheckingMode = "basic"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportOptionalContextManager = "none"

[tool.uv.sources]
oncx-core = { path = "lib/oncx_core-1.14.1-py3-none-any.whl" }
